JDK8默认垃圾回收器测试